# kaciga_fw

./: CMakeLists.txt  README.md  sdkconfig
components/SSD1306_Driver/inc/: ssd1306.h
components/SSD1306_Driver/src/: ssd1306.c
main/: CMakeLists.txt  common_types.h  display_logic.c  display_logic.h  espnow_common.h  espnow_logic.c  espnow_logic.h  global_vars.h  main.c  sensor.c  sensor.h  sensor_logic.c  sensor_logic.h
